// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense summary correctly 1`] = `
<h1>
  Viewing 
  1
   expense
   totalling 
  $1.95
  .
</h1>
`;

exports[`should render multiple expense summary correctly 1`] = `
<h1>
  Viewing 
  3
   expense
  s
   totalling 
  $1,141.95
  .
</h1>
`;
